// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`java projects correctly generates JS module 1`] = `
"
var link = document.createElement(\\"link\\");
link.setAttribute(\\"rel\\", \\"stylesheet\\");
link.setAttribute(\\"type\\", \\"text/css\\");
link.setAttribute(\\"href\\", Liferay.ThemeDisplay.getPathContext() + \\"/o/java-project/file.css\\");

function defineModule() {
	__WRAPPED_MODULE__	
}

link.onload = defineModule;

link.onerror = function() {
	console.warn('Unable to load /o/java-project/file.css. However, its .js module will still be defined to avoid breaking execution flow (expect some visual degradation).');

	defineModule();
}

document.querySelector(\\"head\\").appendChild(link);
"
`;

exports[`java projects correctly generates JS module 2`] = `
"
module.exports = link;
"
`;

exports[`standard projects correctly generates JS module 1`] = `
"
var link = document.createElement(\\"link\\");
link.setAttribute(\\"rel\\", \\"stylesheet\\");
link.setAttribute(\\"type\\", \\"text/css\\");
link.setAttribute(\\"href\\", Liferay.ThemeDisplay.getPathContext() + \\"/o/a-project/file.css\\");

function defineModule() {
	__WRAPPED_MODULE__	
}

link.onload = defineModule;

link.onerror = function() {
	console.warn('Unable to load /o/a-project/file.css. However, its .js module will still be defined to avoid breaking execution flow (expect some visual degradation).');

	defineModule();
}

document.querySelector(\\"head\\").appendChild(link);
"
`;

exports[`standard projects correctly generates JS module 2`] = `
"
module.exports = link;
"
`;
